# Trading

./: .gitignore  .replit  PHASE01_REPORT.md  PHASE02_REPORT.md  PHASE03_REPORT.md  PROJECT_AUDIT.md  PROJECT_DOCS.md  TECHNICAL_AUDIT.md  UPGRADE_LOG.md  pyproject.toml  replit.md  requirements.txt  run.py
.agents/memory/: MEMORY.md  causal-pivot-mapping.md  docs-code-drift.md  ml-relevance-filter.md  ml-relevance-hard-filter.md  pattern-detectors.md  scanner-symbol-keys.md  synthetic-validation-measurement.md  (+1 more)
attached_assets/: Pasted---1784411214622_1784411214624.txt  Pasted--100-500-config-py-defa-1784413879368_1784413879369.txt  Pasted--venv-root-spb-3-vm-slnj-opt-Trading-find-opt-Trading-n_1771014449727.txt  Pasted-Create-a-full-featured-Python-based-system-for-real-tim_1766083278393.txt  Pasted-You-are-a-senior-Python-full-stack-developer-working-on_1782411781260.txt  Pasted-You-are-a-senior-quantitative-Python-developer-working-_1782335781149.txt  Pasted-You-are-a-senior-quantitative-Python-developer-working-_1782341293099.txt  Pasted-You-are-a-senior-quantitative-developer-code-auditor-an_1782334546796.txt  Pasted-root-spb-3-vm-slnj-cd-opt-Trading-root-spb-3-vm-slnj-op_1771007573617.txt
scripts/: generate_synthetic.py  train_ml.py  validate.py
static/: index.html
tests/: test_atr_adaptive.py  test_binance_ws_feed.py  test_causal_detection.py  test_database.py  test_level_detector_v2.py  test_missing_patterns.py  test_ml_filter.py  test_ml_integration.py  test_performance.py  test_synthetic.py  test_synthetic_validation.py  test_trend_freshness.py
(+24 files in other folders)
